tests/artifacts/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: "2026-06-26T23:42:41Z"
  generation: 1
  name: prometheus
  namespace: default
  resourceVersion: "2878"
  uid: b51b80c4-dc4d-425f-ad77-239ca333c146
spec:
  hostnames:
  - prometheus.local
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
    namespace: default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: kube-prometheus-stack-1782-prometheus
      namespace: default
      port: 9090
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents:
  - conditions:
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Route is accepted
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Resolved all the Object references for the Route
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: default
